--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 3.17)
 project(JsonValidator)
 
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(JsonValidator
         main.cpp
-        Lexer.cpp
-        Parser.cpp
-        utilities.cpp)
+        src/Lexer.cpp
+        src/Parser.cpp
+        src/utilities.cpp)
